force-app/main/default/objects/Gong_Processor_Config__mdt/Gong_Processor_Config__mdt.object-meta.xml
<CustomObject>
    <label>Gong Processor Config</label>
    <pluralLabel>Gong Processor Configs</pluralLabel>
</CustomObject>