force-app/main/default/objects/Gong_Processor_Config__mdt/fields/AI_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>AI_Batch_Size__c</fullName>
    <label>AI Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>