force-app/main/default/objects/Gong_Processor_Config__mdt/fields/AI_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Enabled</label>
    <type>Checkbox</type>
</CustomField>