force-app/main/default/objects/Gong_Processor_Config__mdt/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <label>AI Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>