force-app/main/default/objects/Gong_Processor_Config__mdt/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <description>Anthropic API key for Claude AI analysis. Enter your API key here after deployment.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>