force-app/main/default/objects/Gong_Processor_Config__mdt/fields/Excluded_Domains__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Domains__c</fullName>
    <label>Excluded Domains</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>