force-app/main/default/objects/Gong_Processor_Config__mdt/fields/Internal_Domain__c.field-meta.xml
<CustomField>
    <fullName>Internal_Domain__c</fullName>
    <label>Internal Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>